@@ -71,6 +71,7 @@
  70. New Achevement type: SCRIPTED, and new Scriptable command: MPACHIEVE
  71. Layer info added to VIEW and slightly more apparently in LONGLOOK.
  72. Conquest now requires dead mob lvl diff <= EXPRATEx2 (from ini file) HELP CONQUERABLE
+ 73. GenTraps now support reset ticks for builder-set traps.
  
 # Build 5.10.2 Release 4/28/2023
   *  DATABASE CHANGED! (Enlarged CMDATE, and new expiration date added to CMJRNL table)
